--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <string name="app_name">Videofy</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello World, AndroidMobileAppActivity!</string>
-    <string name="author">Suriyaa Kudo (@iSC Apps and Videofy Team)</string>
+    <string name="author">Suriyaa Kudo (iSC Apps and Videofy Team)</string>
 </resources>
